add paragraph to code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Headers</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, a veritatis libero rerum molestias doloremque sapiente?
+    </p>
 </body>
 </html>
