add list and headers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, a veritatis libero rerum molestias doloremque sapiente?
+        <ul>
+            <li>Home</li>
+            <li>About us</li>
+            <li>Contact us</li>
+        </ul>
     </p>
 </body>
 </html>
